--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
        <td id="grandTotal">$</td>
      </tr>
    </table>
+   <a href = "https://github.com/ewtaylor225/dev-07/edit/master/index.html" target"_blank"> Repo</a>
+   <a href = "https://github.com/ewtaylor225/dev-07/edit/master/index.html" target"_blank"> NU checker</a>
+   <p> idk what wave is </p>
    <a id="resetbutt" href="#" class="action">Waste Money Again!</a>
  </div>
 <!-- partial -->
