--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      </tr>
    </table>
    <a href = "https://github.com/ewtaylor225/dev-07/edit/master/index.html" target"_blank"> Repo</a>
-   <a href = "https://github.com/ewtaylor225/dev-07/edit/master/index.html" target"_blank"> NU checker</a>
+   <a href = "https://validator.w3.org/nu/?doc=https%3A%2F%2Fgithub.com%2Fewtaylor225%2Fdev-07" target"_blank"> NU checker</a>
    <p> idk what wave is </p>
    <a id="resetbutt" href="#" class="action">Waste Money Again!</a>
  </div>
